# binary-brain-v1

./: CMakeLists.txt  README.md  SPEC.md  binary_brain_code_skeleton.md
cuda/: CMakeLists.txt  forward_pass.cu  plasticity_kernels.cu  reward_kernels.cu  structural_kernels.cu  xnor_popcount.cuh
include/: CMakeLists.txt  bb_config.hpp  bb_types.hpp
include/bb_core/: actuator_pool.hpp  network.hpp  neuron.hpp  plasticity.hpp  reward_bus.hpp  sensor_pool.hpp  structural_plasticity.hpp  synapse.hpp
python/: CMakeLists.txt  bb_pybind.cpp  brain.py
scripts/: simulate.py
src/: CMakeLists.txt  actuator_pool.cpp  network.cpp  neuron.cpp  plasticity.cpp  reward_bus.cpp  sensor_pool.cpp  structural_plasticity.cpp  synapse.cpp
tests/: CMakeLists.txt  test_forward.cpp  test_plasticity.cpp  test_reward.cpp  test_structural.cpp
