cmake_minimum_required(VERSION 3.25)
project(BinaryBrain LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

option(BB_ENABLE_CUDA "Build with CUDA kernels" ON)
if(BB_ENABLE_CUDA)
    find_package(CUDA)
    if(CUDA_FOUND)
        enable_language(CUDA)
        set(BB_WITH_CUDA TRUE)
        set(CMAKE_CUDA_STANDARD 17)
    else()
        message(WARNING "CUDA not found; building without GPU support")
        set(BB_WITH_CUDA FALSE)
    endif()
else()
    set(BB_WITH_CUDA FALSE)
endif()

add_subdirectory(include)
add_subdirectory(src)
if(BB_WITH_CUDA)
    add_subdirectory(cuda)
endif()

add_subdirectory(python)
add_subdirectory(tests)
